--- a/Lab_Management.v1/src/main/resources/templates/admin/equipment-edit-form.html
+++ b/Lab_Management.v1/src/main/resources/templates/admin/equipment-edit-form.html
@@ -13,34 +13,49 @@
 
 </head>
 <body class="scroll-container">
-<equipment-form>
+<equipment-edit-form>
     <!--<div th:replace="admin/headerAdmin :: header-admin"></div>-->
-    <h1 style="margin-top: 50px; text-align: center;">Thêm Thiết bị</h1><br>
+    <h1 style="margin-top: 50px; text-align: center;">Thông tin Thiết bị</h1><br>
     <div class="container">
-        <form th:action="@{'/Lab/admin/Equipment/add'}" method="post" enctype="multipart/form-data">
+        <form th:object="${equipment}" th:action="@{'/Lab/admin/Equipment/showFormForUpdate/'+ ${equipment.getId}}" method="post" enctype="multipart/form-data">
             <div class="form-group">
                 <h4 for="name">Tên phòng thiết bị:</h4>
                 <input type="text" class="form-control" id="name" name="name" required
-                       th:placeholder="'Máy hiện sóng'">
+                       th:value="*{getName}">
             </div>
             <div class="main-card mb-3 card form-group">
                 <div class="card-body">
                     <h4 for="description">Mô tả:</h4>
                     <textarea rows="1" class="form-control autosize-input" style="height: 35px;"
                               id="description" name="description" required
-                              th:placeholder="'[Đây là máy có chức năng hiện sóng, đã sửa nút nguồn ngày 12/3/2024]'"
+                              th:text="*{getDescription}"
                     ></textarea>
                 </div>
             </div>
             <div class="form-group seriesDiv ">
-                <h4 for="series">Nhập đúng chuỗi seri như mẫu:</h4>
+                <h4 for="series">Danh sách seri máy:</h4>
                 <div class="d-flex flex-row flex-wrap justify-content-start row">
-                    <div class="inputseri d-flex flex-row flex-wrap justify-content-start">
-                        <input type="search" class="form-control m-3 col-sm-6" id="series" name="series" required
-                               th:placeholder="'seri mới'" style="font-weight: bold">
-                        <button type="button" class="btnremove btn btn-primary my-3 col-sm-2" onclick="removeSeri(this)"> - </button>
-                    </div>
+                    <th:block th:each="seri : ${equipment.getEquipmentSerieList}">
+                        <div class="inputseri d-flex flex-row flex-wrap justify-content-start">
+                            <input type="search" class="form-control m-3 col-sm-6" id="series" name="series" required
+                                   th:value="${seri}" style="font-weight: bold">
+                            <button type="button" class="btnremove btn btn-primary my-3 col-sm-2" onclick="removeSeri(this)"> - </button>
+                        </div>
+                    </th:block>
                     <button type="button" class="btn btn-primary m-3" onclick="addInput(this)"> + </button>
+                </div>
+            </div>
+            <div class="form-group seriesDiv ">
+                <h4 for="series">Danh sách seri máy đã qua sửa chữa:</h4>
+                <div class="d-flex flex-row flex-wrap justify-content-start row">
+                    <th:block th:each="seri : ${equipment.getEquipmentSerieFixedList}">
+                        <div class="inputseri d-flex flex-row flex-wrap justify-content-start">
+                            <input type="search" class="form-control m-3 col-sm-6" id="seriesfixed" name="seriesfixed" required
+                                   th:value="${seri}" style="font-weight: bold">
+                            <button type="button" class="btnremove btn btn-primary my-3 col-sm-2" onclick="removeSeri(this)"> - </button>
+                        </div>
+                    </th:block>
+                    <button type="button" class="btn btn-primary m-3" onclick="addInputseriesfixed(this)"> + </button>
                 </div>
             </div>
             <style>
@@ -80,8 +95,35 @@
 
                     formGroup.insertBefore(div_inputseri, button);
                 }
+                function addInputseriesfixed(button) {
+                    var formGroup = button.parentNode;
+                    var div_inputseri = document.createElement('div');
+                    div_inputseri.classList.add('inputseri');
+                    div_inputseri.setAttribute('class', 'inputseri d-flex flex-row flex-wrap justify-content-start');
+
+                    var input = document.createElement('input');
+                    input.type = 'text';
+                    input.setAttribute('class', 'form-control m-3 col-sm-6');
+                    input.name = 'seriesfixed';
+                    input.required = true;
+                    input.setAttribute('style', 'font-weight : bold');
+                    input.setAttribute('placeholder', "seri mới");
+
+                    var btnremove = document.createElement('button');
+                    btnremove.setAttribute('type', 'button');
+                    btnremove.setAttribute('class', 'btnremove btn btn-primary my-3 col-sm-2');
+                    btnremove.textContent = '-';
+                    btnremove.addEventListener('click', function() {
+                        removeSeri(this);
+                    });
+
+                    div_inputseri.appendChild(input);
+                    div_inputseri.appendChild(btnremove);
+
+                    formGroup.insertBefore(div_inputseri, button);
+                }
             </script>
-            <button type="submit" class="btn btn-primary">Thêm</button>
+            <button type="submit" class="btn btn-primary">Sửa</button>
         </form>
     </div>
 
@@ -89,6 +131,6 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-</equipment-form>
+</equipment-edit-form>
 </body>
 </html>
