--- a/Lab_Management.v1/src/main/resources/templates/admin/labs-edit-form.html
+++ b/Lab_Management.v1/src/main/resources/templates/admin/labs-edit-form.html
@@ -19,6 +19,7 @@
         .machine-block p{margin-bottom:5px}
         .machine-block ul{margin-top:10px;padding-left:20px}
         .machine-block ul li{list-style-type:square}
+        .machine-block img {max-width: 100%;max-height: 100%;}
         .remove-button{padding: unset; border: unset; font-weight: bold; margin-bottom: 10px}
         .remove-button:hover{color: red}
     </style>
@@ -51,28 +52,43 @@
                 <option th:each="manager : ${Managers}" th:value="${manager.getId}" th:text="${manager.getName}"></option>
             </select>
         </div>
-        <br>
-        <div class="row">
-            <div th:each="machine : ${equipmentLabDTOs}" class="col-md-3 mb-3">
-                <div class="machine-block">
-                    <div class="d-flex flex-row justify-content-start">
+        <!-- Submit button -->
+        <button type="submit" class="btn btn-primary">Lưu</button>
+    </form>
+    <br>
+    <br>
+    <h2>Các thiết bị có trong phòng thí nghiệm</h2>
+    <br>
+    <div class="row">
+        <div th:each="machine : ${equipmentLabDTOs}" class="col-md-3 mb-3">
+            <div class="machine-block">
+                <div class="d-flex flex-row justify-content-between">
+                    <div>
                         <h4 th:text="${machine.getName}"></h4>
-                        <button class="remove-button" onclick="removeEquipment()"> Bỏ </button>
                     </div>
-                    <p>Số lượng: <span th:text="${#lists.size(machine.getEquipmentSerieList)}"></span></p>
-                    <p>Seri:</p>
-                    <ul>
-                        <li th:each="seri : ${machine.getEquipmentSerieList}">
-                            <span th:text="${seri}"></span>
-                        </li>
-                    </ul>
+                    <form th:action="@{/Lab/admin/room/removeEquiLab}" method="post">
+                        <input type="hidden" th:value="${labDTO.getId}" name="LabId">
+                        <input type="hidden" th:value="${machine.getId}" name="removeEquiLab">
+                        <button type="submit"  class="remove-button" onclick="removeEquipment()"> Bỏ </button>
+                    </form>
                 </div>
+                <p>Số lượng: <span th:text="${#lists.size(machine.getEquipmentSerieList)}"></span></p>
+                <p>Seri:</p>
+                <ul>
+                    <li th:each="seri : ${machine.getEquipmentSerieList}">
+                        <span th:text="${seri}"></span>
+                    </li>
+                </ul>
             </div>
         </div>
-        <br>
-        <!-- Submit button -->
-        <button type="submit" class="btn btn-primary">Save</button>
-    </form>
+        <div class="col-md-2 mb-3">
+            <div class="machine-block">
+                <a href="/Lab/admin/room/addEqui">
+                    <img src="https://png.pngtree.com/png-vector/20230316/ourmid/pngtree-plus-sign-line-icon-vector-png-image_6650590.png" alt="Thêm">
+                </a>
+            </div>
+        </div>
+    </div>
 </div>
 
 <!-- Link to Bootstrap JS and jQuery -->
